# bushi

./: .gitignore  .sqruff  ALGORITHM.md  Cargo.toml  example.toml  go.mod  go.sum
bushi-index/: .clang-format  .gitignore  Makefile  README.md  bushi-index.c  init.sql  meson.build  test.c
bushi-index/docs/: backfill-first-parent-depth.md  file-history-first-parent-query.md  first-parent-ancestor-skip-list.md
bushi-tests/: .gitignore  README.md  demo-cli.py
bushi-tests/history/: README.md  make-repo.sh
bushi-tests/many-refs/: README.md  make-repo.sh
bushi-utils/: .gitignore  demo-cli.py
bushi-utils/history/: make-repo.sh
bushi-webui/: Cargo.toml  README.md
bushi-webui/docs/: tech-stack.md  ui-design.md  url-design.md  ux-prototype.md
bushi-webui/src/: data.rs  error.rs  format.rs  lib.rs  main.rs  page.rs  web.rs
bushi-webui/src/data/: git.rs  sqlite.rs
bushi-webui/src/page/: blob.rs  commit.rs  history.rs  refs.rs  repo_list.rs  summary.rs  tree.rs
bushi-webui/static/: bushi.css
bushi-webui/templates/: blob.html  commit.html  error.html  header.html  history.html  page.html  refs.html  repo_list.html  summary.html  tree.html
bushi-webui/tests/: blob.rs  commit.rs  log.rs  refs.rs  repo_list.rs  sqlite.rs  summary.rs  tree.rs
bushi-webui/tests/helpers/: mod.rs
cmd/bushi/: main.go
cmd/bushi-hook/: main.go
config/: config.go  config_test.go  example.toml
controller/: router.go
database/: models.go  sqlite.go
doc/: LIMITS.md
internal/igit/: export-commits.go  export-refs.go
server/: server.go
services/sgit/: export-commits.go  export-refs.go
src/: config.rs  lib.rs  state.rs
src/database/: channel.rs  commit.rs  init.sql  insert-ancestor.sql  mod.rs  oid.rs  reference.rs  repository.rs
src/handler/: sync.rs
tests/: git-branch-cte.sql  git-contain.sql  git-log-cte.sql  git-log-mark.sql  insert-ancestor.sql
tests/fixtures/: README.md
tests/sql-cheat/: commit-depth.sql  git-log-cte.sql  git-log-mark.sql  test-trigger.sql
utils/log/: log.go
utils/ugit/: marks.go  misc.go  misc_test.go
