[package]
name = "bushi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
config = { version = "0.15.11", default-features = false, features = ["toml"] }
git2 = { version = "0.20.1", default-features = false }
indoc = "2.0.6"
moka = { version = "0.12.10", features = ["future"] }
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.19.1"
