[package]
name = "bushi-webui"
version = "0.0.1"
edition = "2024"

[dependencies]
ammonia = "4"
anyhow = "1"
askama = "0.12"
async-trait = "0.1"
axum = "0.8"
deadpool-sqlite = "0.10"
git2 = "0.20"
html-escape = "0.2"
moka = { version = "0.12", features = ["future"] }
pulldown-cmark = "0.10"
rusqlite = "0.33"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
